Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -754,8 +754,7 @@ Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010-2019 f
 Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC over the period 2010-2019, and for different seasons. 
 
 %
-A 4.5$\pm$1.5\%/yr reduction (Tab.~\ref{tab:KEX1}) 
- \COMMENT{DS: changed "-X\%" xx reduction to just X\% reduction. Should be careful throughout... very inconsistent now}
+A  reduction (-4.5$\pm$1.5\%/yr, Tab.~\ref{tab:KEX1}) 
 in elemental carbon (EC) for 2010--2019 was
 calculated for the 15 sites assessed, which is
 quite comparable to the reduction (-5.0$\pm$0.9\%/yr)
@@ -774,7 +773,7 @@ pronounced in summer and fall (Tab.~\ref{tab:KEX1},Fig.~\ref{fig:KEX1}), but the
 that there is a minor seasonal variability in the reduction of EC. It can be noted though that
 there are more sites with significant trends (p-values $<$ 0.05)  in summer than winter (Fig.\ref{fig:ECarrows}).
 
-
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4\% in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 
 
 \begin{table}
@@ -862,7 +861,7 @@ was calculated for the 15 sites assessed (Tab.~\ref{tab:KEX2}), but the
 downward trend was statistically significant only for Iskrba (Slovenia)
 and Ispra (Italy), which are amongst the sites with the highest OC
 loading. At these two sites, the reduction was noticeably higher 
-(-3.1\%/yr (Iskrba) and -5.9\%/yr (Ispra)) than for the mean of all sites. The
+(-3.1\%/yr at Iskrba, -5.9\%/yr at Ispra) than for the mean of all sites. The
 reduction in OC appears somewhat lower at the westernmost and northernmost
 sites (Fig.\ref{fig:OCtrends}). 
 
@@ -884,7 +883,7 @@ observed only for Ispra.
 Figure~\ref{fig:OCarrows} makes it clear that there were large differences in both sign and magnitude of the summertime trends in OC, in both modelled and observed results. For the winter trends, Fig.~\ref{fig:OCarrows} shows that essentially all observed trends were reductions, whereas the modelled trends were more variable and less significant.
 
 
-
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period, and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of ca. -4\%/yr are are not redthe  substa.aptures well the relative changes which are ca. -4\% in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -892,7 +891,7 @@ Figure~\ref{fig:OCarrows} makes it clear that there were large differences in bo
  \caption{Absolute change ( \ugC/yr) and relative change (\%/yr) and
    corresponding confidence intervals in observed and modelled annual
    and seasonal aggregated OC concentrations at 15 sites across Europe
-   for 2010--2020. The number of sites with a significant outcome
+   for 2010--2019. The number of sites with a significant outcome
    is provided. \label{tab:KEX2}
  }
  
@@ -941,7 +940,7 @@ autumn &              15 &          1 &           0 &                  -0.098 & 
 
 \subsection{Discussion of EC, OC trends}
 
-Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019. 
+Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019. It is seen that the magnitude of the trends can differ substantially depending on the time-window. For EC the values range from -2.2\%/yr to -4.24\%/yr, and for levoglucosan from -2.5\%/yr to -5.2\%/yr, with all values satisfying the p-value$<$0.05 significance test. Trend values for OC vary even more, but these trends were insignificant for all periods.
 
 
 \begin{table}[H]
@@ -955,7 +954,7 @@ Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} 
  & & & & \\
 %\multicolumn{5}{c}{Revised from Wenche 26/8/21} \\
 EC   & annual  & -3.0 (0.043)        &  -2.21 (0.034)   & -4.24 (0.012) \\
-OC   & annual  &  -0.44 (0.876)      &   0.18 (1.0)     & -0.64 (1.0)   \\
+OC   & annual  &  -0.44 (0.876)      &   0.18 (1)     & -0.64 (1)   \\
 Levo & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) \\
 & & & & \\
 \hline
@@ -964,14 +963,14 @@ Levo & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) \\
 
 Notes:
 (a) Values for 2008-2018 use same procedure as for 2008-2019 and 2010-2019. Numbers
-differ slightly from results of \citet{Yttri2021}, which had -4.2\%Yr for EC and -2.8\%/yr for levoglucosan.
-\COMMENT{ISSUES: Explain more diffs from Yttro2021 and 2008-2018 trends above.\\
-p-values of 1 look odd.}\\
+differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2\%Yr for EC and -2.8\%/yr for levoglucosan.
+\COMMENT{ISSUES: Explain more diffs from Yttri2021 and 2008-2018 trends above.\\
+p-values of 1 look odd. Do we have any good words for this?}\\
 }
 \end{table}
 
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC and OC  over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4\% in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
+
 
 
 As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This probably reflects the minor seasonal variability in most EC sources, except from
