Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -880,10 +880,10 @@ whereas no reduction (0\%/yr) was seen in summer. Spring (-2.2\%/yr, Tab.~\ref{t
 that of winter and summer and statistically significant reductions were
 observed only for Ispra. 
 %
-Figure~\ref{fig:OCarrows} makes it clear that there were large differences in both sign and magnitude of the summertime trends in OC, in both modelled and observed results. For the winter trends, Fig.~\ref{fig:OCarrows} shows that essentially all observed trends were reductions, whereas the modelled trends were more variable and less significant.
+Figure~\ref{fig:OCarrows} makes it clear that there were large differences in both sign and magnitude of the summertime trends in OC at individual sites, in both modelled and observed results. For the winter trends, Fig.~\ref{fig:OCarrows} shows that essentially all observed wintertime trends were reductions, whereas the modelled trends were more variable and less significant. In summertime the trends can be positive or negative, and are generally not significant.
 
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period, and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of ca. -4\%/yr are are not redthe  substa.aptures well the relative changes which are ca. -4\% in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period (see also Tab.~\ref{tab:KEX2}), and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of -4.2\%/yr are are not reproduced by the model at all (-1.1\%/yr), though even in winter the observed trends were only significant for six of the 15 sites. In summer the observed trends are very small but negative (-0.03\%/yr), whereas the model suggests positive trends of 2.1\%/yr. As noted above (c.f. Fig.~\ref{fig:OCarrows}), the summer trends are very different for individual sites, even with respect to the sign of the change, and one cannot assign much significance to the changes. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -940,38 +940,40 @@ autumn &              15 &          1 &           0 &                  -0.098 & 
 
 \subsection{Discussion of EC, OC trends}
 
-Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019. It is seen that the magnitude of the trends can differ substantially depending on the time-window. For EC the values range from -2.2\%/yr to -4.24\%/yr, and for levoglucosan from -2.5\%/yr to -5.2\%/yr, with all values satisfying the p-value$<$0.05 significance test. Trend values for OC vary even more, but these trends were insignificant for all periods.
+Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019, all using the same methodology. It is seen that the magnitude of the trends can differ substantially depending on the time-window. For EC the values range from -2.2\%/yr to -4.24\%/yr, and for levoglucosan from -2.5\%/yr to -5.2\%/yr, with all values satisfying the p-value$<$0.05 significance test. Trend values for OC vary even more, but these trends were insignificant for all periods. Although we expect some of these trends to reflect changes in emissions, meteorological variation will also play a large role, especially in causing the high sensitivity of the calculated trends to small changes in the time window chosen.
 
 
 \begin{table}[H]
 \centering
-\parbox{12cm}{
-\caption{Relative trends (\%/yr) (and p-values in parentheses) calculated for Birkenes using different time-windows \label{tab:BirkenesTrends}}}
+\parbox{11cm}{
+\caption{Relative trends (\%/yr) (and p-values in parentheses) calculated for Birkenes 
+    using different time-windows \label{tab:BirkenesTrends}}}
 \begin{tabular}{lcccc}
-\hline
+\toprule
      &         & 2008-2018$^{(a)}$& 2008-2019     & 2010-2019       \\
-\hline
+\midrule
  & & & & \\
 %\multicolumn{5}{c}{Revised from Wenche 26/8/21} \\
 EC   & annual  & -3.0 (0.043)        &  -2.21 (0.034)   & -4.24 (0.012) \\
 OC   & annual  &  -0.44 (0.876)      &   0.18 (1)     & -0.64 (1)   \\
 Levo & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) \\
 & & & & \\
-\hline
+\bottomrule 
 \end{tabular}\\
-\parbox{12cm}{
+\parbox{11cm}{
 
 Notes:
 (a) Values for 2008-2018 use same procedure as for 2008-2019 and 2010-2019. Numbers
-differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2\%Yr for EC and -2.8\%/yr for levoglucosan.
-\COMMENT{ISSUES: Explain more diffs from Yttri2021 and 2008-2018 trends above.\\
+differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2\%Yr for EC and -2.8\%/yr for levoglucosan.\\
+\COMMENT{ISSUES:\\ Explain diffs to Yttri et al 2021 and 2008-2018 trends better?\\
 p-values of 1 look odd. Do we have any good words for this?}\\
 }
 \end{table}
 
+IN PROGRESS...
+Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 
-
-
+At first sight, the 2010-2019 reduction of 4.2\%/yr in EC across all seasons is rather dramatic, though as noted above a different choice if time-window might suggest a lower magnitude of changes. Presumably 
 
 As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This probably reflects the minor seasonal variability in most EC sources, except from
 residential heating. \citet{Yttri2021} found that the reduction in EC
