Update on Overleaf.

--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -64,10 +64,10 @@ All the data are available from the EBAS database (\url{http://ebas.nilu.no/}) a
 
 \begin{figure}[h!]
  \centering
-%  \subfigure[Inorganic compounds] {\includegraphics*[width=0.3\linewidth]{FIGS_Obs/main.png}}
-%  \subfigure[PM mass concentration] {\includegraphics*[width=0.3\linewidth]{FIGS_Obs/pm.png}}
-%  \subfigure[Ozone] {\includegraphics*[width=0.3\linewidth]{FIGS_Obs/ozone.png}}
-\caption{\label{fig:EMEP-measurement-network}EMEP measurement network for level 1 components in 2018}
+  \subfigure[Inorganic compounds] {\includegraphics*[width=0.3\linewidth]{FIGS_Obs/main.png}}
+  \subfigure[PM mass concentration] {\includegraphics*[width=0.3\linewidth]{FIGS_Obs/pm.png}}
+  \subfigure[Ozone] {\includegraphics*[width=0.3\linewidth]{FIGS_Obs/o3.png}}
+\caption{\label{fig:EMEP-measurement-network}EMEP measurement network for level 1 components in 2019}
 \end{figure}
 
 120 sites reported measurements of inorganic ions in precipitation and/or main components in air. However, not all of these measurements were co-located, as illustrated in Figure~\ref{fig:EMEP-measurement-network}. There were 73 sites with measurements in both air and precipitation.  Ozone was measured at 138 EMEP sites.The number of sites is marginally lower than in 2018
