--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -973,7 +973,8 @@ p-values of 1 look odd. Do we have any good words for this?}\\
 IN PROGRESS...
 Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 
-At first sight, the 2010-2019 reduction of 4.2\%/yr in EC across all seasons is rather dramatic, though as noted above a different choice if time-window might suggest a lower magnitude of changes. Presumably 
+At first sight, the 2010-2019 reduction of 4.2\%/yr in observed EC across all seasons is rather dramatic, though as noted above a different choice if time-window might suggest a lower magnitude of changes. Presumably 
+
 
 As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This probably reflects the minor seasonal variability in most EC sources, except from
 residential heating. \citet{Yttri2021} found that the reduction in EC
@@ -1008,6 +1009,13 @@ whereas it was lower for the other seasons. As for the observations,
 the model predicted a reduction in EC for all sites, but for a few sites
 the model estimated a reduction that was 3--4 times larger than seen
 for the observations.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=12cm,trim=0 0 0 1.5cm]{FIGS_TRENDS/PlotEmisTrends_PM2_5.png}
+    \caption{Trends in \pmfine emissions from GNFR C (mainly residential heating)}
+    \label{fig:gnfrCtrends}
+\end{figure}
 
 MOVED FROM OC: 
 
